<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="btnAceptar">Aceptar</string>
    <string name="title_activity_login">Ingresar</string>
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Aceptar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="welcome">"Bienvenido !"</string>
    <string name="invalid_username">Usuario no registrado</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="saludo">"Ingresa Email y contaseña"</string>
    <string name="btnIngresar">"Ingresar"</string>
    <string name="btnRegistrar">"Registrarse"</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="elegirPropiedad">Seleccionar una propiedad </string>
    <string name="disponiblebtn">Disponibilidad</string>
    <string name="menu_home">Propiedades</string>
    <string name="menu_gallery">Inquilinos</string>
    <string name="menu_slideshow">Contratos</string>
    <string name="menu_tools">Pagos</string>
    <string name="menu_share">Mi Perfil</string>
    <string name="nombreu">Nombre: </string>
    <string name="apellidou">Apellido: </string>
    <string name="dniu">Documento: </string>
    <string name="telefonou">Teléfono: </string>
    <string name="correou">E-mail: </string>
    <string name="passu">Contraseña: </string>
    <string name="btnCancelar">Cancelar</string>
    <string name="btnEditar">Editar</string>
    <string name="title_activity_menu_lateral">men</string>
    <string name="domicilio">Domicilio:</string>
    <string name="ambientes">Ambientes: </string>
    <string name="uso">Uso: </string>
    <string name="precio">Precio: </string>
    <string name="disponible">Disponible: </string>
    <string name="tipo">Tipo: </string>

    <string name="fechainicio">"Fecha de Inicio:"</string>
    <string name="fechafin">"Fecha de Finalización:"</string>
    <string name="monto">"Monto:"</string>
    <string name="cerrar">"Cerrar"</string>
    <string name="ver">Ver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Propiedad">
        <item>Illia2</item>
        <item>España3</item>
        <item>Rivadavia4</item>

    </string-array>
</resources>
